Fix support php and laravel matrix in action

--- a/.github/workflows/check-package.yml
+++ b/.github/workflows/check-package.yml
@@ -9,11 +9,11 @@ on:
         type: string
       laravel:
         default: '["10.*"]'
-        required: true
+        required: false
         type: string
       dependencyVersion:
         default: '["prefer-stable"]'
-        required: true
+        required: false
         type: string
     secrets:
       composerAuthJson:
@@ -64,7 +64,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "filament/support" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
       - name: Run GrumPHP tasks
